--- a/UniversityRegistrar/Views/Courses/Index.cshtml
+++ b/UniversityRegistrar/Views/Courses/Index.cshtml
@@ -18,4 +18,6 @@
 
 <p>@Html.ActionLink("Add new course", "Create")</p>
 
+<p>@Html.ActionLink("See all departments", "Index", "Departments")</p>
+
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
