--- a/UniversityRegistrar/Views/Home/Index.cshtml
+++ b/UniversityRegistrar/Views/Home/Index.cshtml
@@ -6,3 +6,4 @@
 <hr>
 <p>@Html.ActionLink("See all students", "Index", "Students")</p>
 <p>@Html.ActionLink("See all courses", "Index", "Courses")</p>
+<p>@Html.ActionLink("See all departments", "Index", "Departments")</p>
