--- a/UniversityRegistrar/Views/Students/Index.cshtml
+++ b/UniversityRegistrar/Views/Students/Index.cshtml
@@ -21,4 +21,6 @@ else
 }
 
 <p>@Html.ActionLink("Add new student", "Create")</p>
+<p>@Html.ActionLink("See all departments", "Index", "Departments")</p>
+
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
